# doc-chef

./: .gitignore  README.md  api.py  main.py  pyproject.toml  requirements.txt
ingest/: __init__.py  embeddings.py  text_splitter.py  vector_store.py
ingest/loaders/: __init__.py  csv_loader.py  docx_loader.py  pdf_loader.py  txt_loader.py
loaders/: csv_loader.py  docx_loader.py  pdf_loader.py  txt_loader.py
retrieve/: __init__.py  llm.py  rag_chain.py  retriever.py
utils/: embeddings.py  llm.py  rag_chain.py  retriever.py  text_splitter.py  vector_store.py
