[project]
name = "docuthinker-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"docx2txt",
	"greenlet==3.2.4",
	"langchain",
	"langchain-community",
	"chromadb",
	"langchain-openai",
	"langchain-text-splitters",
	"pypdf",
	"python-docx",
	"python-dotenv",
	"streamlit",
	"fastapi",
	"uvicorn",
]
